# msge

./: CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: cmake-conan.yaml
cmake/: conan_config.cmake
doc/obsidian/.obsidian/: workspace.json
doc/obsidian/msge/: Concepts.md  Next.md
doc/obsidian/msge/.obsidian/: workspace.json
doc/obsidian/msge/Idea and Storyline/: Alone.md
examples/: CMakeLists.txt
examples/demo/: CMakeLists.txt  KafkaStreamAdapter.h  Probe.h  demo.cpp
examples/demo2/: CMakeLists.txt  KafkaStreamAdapter.h  demo.cpp
examples/loadscene/: CMakeLists.txt  entities.h  loadscene.cpp
examples/minimal/: CMakeLists.txt  minimal_example.cpp
examples/savescene/: CMakeLists.txt  polymorphic_json_demo.h  savescene.cpp  scene.h
examples/scenes/: CMakeLists.txt  scenes.cpp
examples/taskEngine/: tasks.cpp
src/attic/: JsonSerializer.h
src/common/: CMakeLists.txt  FactoryRegistry.h
src/common/math/: DeadReckoning.cpp  DeadReckoning.h  Spatial.h
src/common/plugins/: PluginBase.cpp  PluginBase.h  PluginManager.h
src/common/serializers/: FixedStringSerializer.h
src/common/strings/: FixedString.h  StringTools.h
src/common_tests/: CMakeLists.txt  CommonTest.cpp  FixedStringTest.cpp
src/core/: BaseEntity.h  BaseEntityVisitor.h  BaseScene.h  CMakeLists.txt  CompoundEntity.h  Core.cpp  Core.h  CoreConfig.h  CoreDefinitions.h  CoreEntityVisitor.h  Entity.h  FrameScheduler.h  FrameStamp.h  LogEntityVisitor.h  SerializationBuffer.h  SimpleScene.cpp  SimpleScene.h  Spatial.h  StaticEntity.h  StreamSink.h
src/core/entities/: BaseEntity.h  CompoundEntity.h  DynamicCompoundEntity.h  DynamicEntity.h  EntityState.h  StaticEntity.h
src/core/interfaces/: StreamSink.h
src/core/plugins/: CorePluginInterface.cpp  CorePluginInterface.h  PluginRegistry.cpp  PluginRegistry.h
src/core/scenes/: BaseScene.h  SimpleScene.cpp  SimpleScene.h
src/core/serializers/: BaseEntitySerializer.h  GmtlJsonSerializer.h  SpatialJsonSerializer.h  StateJsonSerializer.h
src/core/visitors/: BaseEntityVisitor.cpp  BaseEntityVisitor.h  CollectSceneEntitiesVisitor.h  CoreEntityVisitor.h  DefaultEntityVisitor.h  DelegateCollectVisitor.h  FindEntityVisitor.cpp  FindEntityVisitor.h  JsonEntitySerializer.cpp  JsonEntitySerializer.h  LogEntityVisitor.h  QualifiedNameStack.h
src/examples/: CMakeLists.txt
src/examples/minimal/: CMakeLists.txt  minimal_example.cpp
src/examples/scenes/: CMakeLists.txt  scenes.cpp
src/examples/taskEngine/: CMakeLists.txt  tasks.cpp
src/plugins/: CMakeLists.txt
src/plugins/default/: CMakeLists.txt  DefaultPlugins.cpp
src/plugins/default/serializer/: JsonSerializer.cpp  JsonSerializer.h  JsonStateSerializer.cpp  JsonStateSerializer.h  StreamSerializer.h  register.h
src/plugins/default/streamsink/: SerializationStreamAdapter.h  register.h
src/plugins/default/taskengine/: register.h
src/plugins/kafka/: CMakeLists.txt  KafkaPlugins.cpp  KafkaStreamAdapter.h
src/taskEngine/: AbstractScheduler.h  AbstractSchedulerTask.h  AbstractTaskQueue.h  ArrayTaskQueue.cpp  ArrayTaskQueue.h  BasicScheduler.cpp  BasicScheduler.h  CMakeLists.txt  FrameStamp.h
src/tests/: CMakeLists.txt
src/tests/common/: CMakeLists.txt  FixedLengthStringTest.cpp  MathTest.cpp  StringToolsTest.cpp
src/tests/common_tests/: CMakeLists.txt  StringToolsTest.cpp
src/tests/core/: CMakeLists.txt  FindVisitor.cpp
