set(LIB_NAME default)
#FILES
file(GLOB_RECURSE HEADER_FILES 	CONFIGURE_DEPENDS "*.h")
file(GLOB_RECURSE CPP_FILES 	CONFIGURE_DEPENDS "*.cpp")
source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" 
	FILES ${HEADER_FILES}  ${CPP_FILES}
)

#DEPENDENCIES
find_package(glog CONFIG REQUIRED)
find_package(gmtl CONFIG REQUIRED)


add_library(${LIB_NAME} MODULE 
	${HEADER_FILES} 
	${CPP_FILES} 
)
add_library(${PROJECT_NAMESPACE}::${LIB_NAME} ALIAS ${LIB_NAME})

target_link_libraries(${LIB_NAME}
	PUBLIC	
		glog::glog
		gmtl::gmtl

		
	PRIVATE
		${PROJECT_NAMESPACE}::core
		${PROJECT_NAMESPACE}::common
)

target_include_directories(${LIB_NAME}
	INTERFACE
		$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_INSTALL_PREFIX}/${LIB_NAME}>
	PUBLIC
		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
)


install(TARGETS ${LIB_NAME}
	RUNTIME
		DESTINATION ${CMAKE_INSTALL_BINDIR}/plugins
		COMPONENT ${RUNTIME_COMPONENT}
	LIBRARY
		DESTINATION ${CMAKE_INSTALL_BINDIR}/plugins
		COMPONENT ${RUNTIME_COMPONENT}
	ARCHIVE
		DESTINATION ${CMAKE_INSTALL_ARCHIVEDIR}/plugins
		COMPONENT ${DEVELOP_COMPONENT}
)
